// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Desktop experience visual snapshots matches the boot splash shell 1`] = `
<div
  class="app-shell app-shell--landing"
>
  <main
    class="app-content app-content--full"
  >
    <section
      aria-label="MAP2 boot splash"
      class="hp2-boot"
    >
      <div
        class="hp2-boot__center"
      >
        <div
          class="hp2-boot__mark-wrap"
        >
          <img
            alt="MAP2 logo"
            class="hp2-boot__mark"
            src="MAP2-LOGO.png"
          />
        </div>
        <h1
          class="hp2-boot__title"
        >
          Mackes Audio Platform
        </h1>
        <p
          class="hp2-boot__subtitle"
        >
          Initializing the Carbon-governed pre-Warp desktop session and restoring platform context.
        </p>
      </div>
      <div
        class="hp2-boot__progress"
      >
        <div
          class="cds--progress-bar cds--progress-bar--big cds--progress-bar--default cds--progress-bar--indeterminate"
        >
          <div
            class="cds--progress-bar__label cds--visually-hidden"
            id="progress-bar-_r_0_"
          >
            <span
              class="cds--progress-bar__label-text"
            >
              Boot progress
            </span>
          </div>
          <div
            aria-busy="true"
            aria-describedby="progress-bar-helper-text-_r_2_"
            aria-invalid="false"
            aria-labelledby="progress-bar-_r_0_"
            class="cds--progress-bar__track"
            role="progressbar"
          >
            <div
              class="cds--progress-bar__bar"
              style="transform: scaleX(NaN);"
            />
          </div>
          <div
            class="cds--progress-bar__helper-text"
            id="progress-bar-helper-text-_r_2_"
          >
            Restoring workplace shell
            <div
              aria-live="polite"
              class="cds--visually-hidden"
              id="progress-bar-helper-_r_1_"
            >
              Loading
            </div>
          </div>
        </div>
      </div>
    </section>
  </main>
  <div
    aria-hidden="true"
    class="cds--layer-one cds--modal shell-power-modal"
    role="presentation"
  >
    <div
      aria-label="Power"
      aria-modal="true"
      class="cds--modal-container cds--modal-container--sm"
      role="dialog"
    >
      <button
        class="cds--visually-hidden"
        type="button"
      >
        Focus sentinel
      </button>
      <div
        class="cds--modal-container-body"
      >
        <div
          class="cds--modal-header"
        >
          <h2
            class="cds--modal-header__label cds--type-delta"
          >
            Power
          </h2>
          <h2
            class="cds--modal-header__heading cds--type-beta"
          >
            Restart backend
          </h2>
          <div
            class="cds--modal-close-button"
          >
            <span
              class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--left cds--tooltip cds--icon-tooltip"
            >
              <div
                class="cds--tooltip-trigger__wrapper"
              >
                <button
                  aria-label="Close"
                  aria-labelledby="tooltip-_r_5_"
                  class="cds--modal-close cds--btn cds--btn--primary cds--btn--icon-only"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="cds--modal-close__icon"
                    fill="currentColor"
                    focusable="false"
                    height="20"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M17.4141 16 24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                    />
                  </svg>
                </button>
              </div>
              <span
                aria-hidden="true"
                class="cds--popover"
                id="tooltip-_r_5_"
                role="tooltip"
              >
                <span
                  class="cds--popover-content cds--tooltip-content"
                >
                  Close
                </span>
                <span
                  class="cds--popover-caret"
                />
              </span>
            </span>
          </div>
        </div>
        <div
          class="cds--layer-two cds--modal-content cds--modal-scroll-content--no-fade"
        >
          Restart the MAP2 backend service? Audio processing will pause briefly while the shell reconnects.
        </div>
        <div
          aria-busy="false"
          class="cds--modal-footer cds--btn-set"
        >
          <button
            class="cds--btn cds--btn--secondary"
            type="button"
          >
            Cancel
          </button>
          <button
            class="cds--btn cds--btn--primary"
            type="button"
          >
            Confirm restart
          </button>
        </div>
      </div>
      <button
        class="cds--visually-hidden"
        type="button"
      >
        Focus sentinel
      </button>
    </div>
  </div>
</div>
`;

exports[`Desktop experience visual snapshots matches the desktop shell after boot completes 1`] = `
<div
  class="app-shell app-shell--landing"
>
  <main
    class="app-content app-content--full"
  >
    <div
      class="hp2-root"
    >
      <section
        class="hp2-desktop hp2-desktop--default-image"
        data-testid="home-desktop"
        data-wallpaper-mode="default-image"
        tabindex="-1"
      >
        <div
          class="hp2-desktop__controls"
        >
          <span
            class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--left cds--tooltip cds--icon-tooltip cds--icon-tooltip--disabled"
          >
            <div
              class="cds--tooltip-trigger__wrapper"
            >
              <button
                aria-labelledby="tooltip-_r_l_"
                class="hp2-desktop__fullscreen-toggle cds--btn cds--btn--sm cds--layout--size-sm cds--btn--ghost cds--btn--disabled cds--btn--icon-only"
                disabled=""
                type="button"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6 15 6 14 2.7 14 7 9.7 6.3 9 2 13.3 2 10 1 10 1 15z"
                  />
                  <path
                    d="M10 1 10 2 13.3 2 9 6.3 9.7 7 14 2.7 14 6 15 6 15 1z"
                  />
                </svg>
              </button>
            </div>
            <span
              aria-hidden="true"
              class="cds--popover"
              id="tooltip-_r_l_"
              role="tooltip"
            >
              <span
                class="cds--popover-content cds--tooltip-content"
              >
                Enter browser fullscreen
              </span>
              <span
                class="cds--popover-caret"
              />
            </span>
          </span>
        </div>
        <div
          aria-hidden="true"
          class="hp2-desktop__hero-wallpaper"
        >
          <img
            alt=""
            class="hp2-desktop__default-wallpaper-image"
            data-testid="home-desktop-default-wallpaper-image"
            src="MAP2-LOGO.png"
          />
        </div>
        <div
          aria-hidden="true"
          class="hp2-desktop__underlay"
        />
        <div
          class="hp2-desktop__cube-launcher"
        >
          <button
            aria-controls="shell-launcher-panel"
            aria-expanded="false"
            aria-haspopup="menu"
            aria-label="Open platform menu"
            class="hero-icon-launcher__btn"
            type="button"
          >
            <div
              aria-hidden="true"
              class="hero-icon-launcher__scene"
            >
              <div
                class="hero-icon-launcher__icon-wrap"
              >
                <svg
                  aria-hidden="true"
                  class="hero-icon-launcher__icon"
                  focusable="false"
                  viewBox="0 0 192 192"
                >
                  <rect
                    fill="#4589FF"
                    height="168"
                    rx="34"
                    width="168"
                    x="12"
                    y="12"
                  />
                  <rect
                    fill="none"
                    height="162"
                    rx="31"
                    stroke="#A6C8FF"
                    stroke-opacity="0.45"
                    stroke-width="2"
                    width="162"
                    x="15"
                    y="15"
                  />
                  <rect
                    fill="#13171B"
                    height="136"
                    rx="24"
                    width="136"
                    x="28"
                    y="28"
                  />
                  <rect
                    fill="#4589FF"
                    height="136"
                    rx="13"
                    width="26"
                    x="83"
                    y="28"
                  />
                  <rect
                    fill="#4589FF"
                    height="26"
                    rx="13"
                    width="136"
                    x="28"
                    y="83"
                  />
                  <rect
                    fill="#1A1E23"
                    height="43"
                    rx="8"
                    width="43"
                    x="34"
                    y="34"
                  />
                  <rect
                    fill="#1A1E23"
                    height="43"
                    rx="8"
                    width="43"
                    x="115"
                    y="34"
                  />
                  <rect
                    fill="#1A1E23"
                    height="43"
                    rx="8"
                    width="43"
                    x="34"
                    y="115"
                  />
                  <rect
                    fill="#1A1E23"
                    height="43"
                    rx="8"
                    width="43"
                    x="115"
                    y="115"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
      </section>
    </div>
  </main>
  <div
    aria-hidden="true"
    class="cds--layer-one cds--modal shell-power-modal"
    role="presentation"
  >
    <div
      aria-label="Power"
      aria-modal="true"
      class="cds--modal-container cds--modal-container--sm"
      role="dialog"
    >
      <button
        class="cds--visually-hidden"
        type="button"
      >
        Focus sentinel
      </button>
      <div
        class="cds--modal-container-body"
      >
        <div
          class="cds--modal-header"
        >
          <h2
            class="cds--modal-header__label cds--type-delta"
          >
            Power
          </h2>
          <h2
            class="cds--modal-header__heading cds--type-beta"
          >
            Restart backend
          </h2>
          <div
            class="cds--modal-close-button"
          >
            <span
              class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--left cds--tooltip cds--icon-tooltip"
            >
              <div
                class="cds--tooltip-trigger__wrapper"
              >
                <button
                  aria-label="Close"
                  aria-labelledby="tooltip-_r_f_"
                  class="cds--modal-close cds--btn cds--btn--primary cds--btn--icon-only"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="cds--modal-close__icon"
                    fill="currentColor"
                    focusable="false"
                    height="20"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M17.4141 16 24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                    />
                  </svg>
                </button>
              </div>
              <span
                aria-hidden="true"
                class="cds--popover"
                id="tooltip-_r_f_"
                role="tooltip"
              >
                <span
                  class="cds--popover-content cds--tooltip-content"
                >
                  Close
                </span>
                <span
                  class="cds--popover-caret"
                />
              </span>
            </span>
          </div>
        </div>
        <div
          class="cds--layer-two cds--modal-content cds--modal-scroll-content--no-fade"
        >
          Restart the MAP2 backend service? Audio processing will pause briefly while the shell reconnects.
        </div>
        <div
          aria-busy="false"
          class="cds--modal-footer cds--btn-set"
        >
          <button
            class="cds--btn cds--btn--secondary"
            type="button"
          >
            Cancel
          </button>
          <button
            class="cds--btn cds--btn--primary"
            type="button"
          >
            Confirm restart
          </button>
        </div>
      </div>
      <button
        class="cds--visually-hidden"
        type="button"
      >
        Focus sentinel
      </button>
    </div>
  </div>
</div>
`;

exports[`Desktop experience visual snapshots matches the desktop wallpaper context menu 1`] = `
<div
  class="app-shell app-shell--landing"
>
  <main
    class="app-content app-content--full"
  >
    <div
      class="hp2-root"
    >
      <section
        class="hp2-desktop hp2-desktop--default-image"
        data-testid="home-desktop"
        data-wallpaper-mode="default-image"
        tabindex="-1"
      >
        <div
          class="hp2-desktop__controls"
        >
          <span
            class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--left cds--tooltip cds--icon-tooltip cds--icon-tooltip--disabled"
          >
            <div
              class="cds--tooltip-trigger__wrapper"
            >
              <button
                aria-labelledby="tooltip-_r_p_"
                class="hp2-desktop__fullscreen-toggle cds--btn cds--btn--sm cds--layout--size-sm cds--btn--ghost cds--btn--disabled cds--btn--icon-only"
                disabled=""
                type="button"
              >
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6 15 6 14 2.7 14 7 9.7 6.3 9 2 13.3 2 10 1 10 1 15z"
                  />
                  <path
                    d="M10 1 10 2 13.3 2 9 6.3 9.7 7 14 2.7 14 6 15 6 15 1z"
                  />
                </svg>
              </button>
            </div>
            <span
              aria-hidden="true"
              class="cds--popover"
              id="tooltip-_r_p_"
              role="tooltip"
            >
              <span
                class="cds--popover-content cds--tooltip-content"
              >
                Enter browser fullscreen
              </span>
              <span
                class="cds--popover-caret"
              />
            </span>
          </span>
        </div>
        <div
          aria-hidden="true"
          class="hp2-desktop__hero-wallpaper"
        >
          <img
            alt=""
            class="hp2-desktop__default-wallpaper-image"
            data-testid="home-desktop-default-wallpaper-image"
            src="MAP2-LOGO.png"
          />
        </div>
        <div
          aria-hidden="true"
          class="hp2-desktop__underlay"
        />
        <div
          class="hp2-desktop__cube-launcher"
        >
          <button
            aria-controls="shell-launcher-panel"
            aria-expanded="false"
            aria-haspopup="menu"
            aria-label="Open platform menu"
            class="hero-icon-launcher__btn"
            type="button"
          >
            <div
              aria-hidden="true"
              class="hero-icon-launcher__scene"
            >
              <div
                class="hero-icon-launcher__icon-wrap"
              >
                <svg
                  aria-hidden="true"
                  class="hero-icon-launcher__icon"
                  focusable="false"
                  viewBox="0 0 192 192"
                >
                  <rect
                    fill="#4589FF"
                    height="168"
                    rx="34"
                    width="168"
                    x="12"
                    y="12"
                  />
                  <rect
                    fill="none"
                    height="162"
                    rx="31"
                    stroke="#A6C8FF"
                    stroke-opacity="0.45"
                    stroke-width="2"
                    width="162"
                    x="15"
                    y="15"
                  />
                  <rect
                    fill="#13171B"
                    height="136"
                    rx="24"
                    width="136"
                    x="28"
                    y="28"
                  />
                  <rect
                    fill="#4589FF"
                    height="136"
                    rx="13"
                    width="26"
                    x="83"
                    y="28"
                  />
                  <rect
                    fill="#4589FF"
                    height="26"
                    rx="13"
                    width="136"
                    x="28"
                    y="83"
                  />
                  <rect
                    fill="#1A1E23"
                    height="43"
                    rx="8"
                    width="43"
                    x="34"
                    y="34"
                  />
                  <rect
                    fill="#1A1E23"
                    height="43"
                    rx="8"
                    width="43"
                    x="115"
                    y="34"
                  />
                  <rect
                    fill="#1A1E23"
                    height="43"
                    rx="8"
                    width="43"
                    x="34"
                    y="115"
                  />
                  <rect
                    fill="#1A1E23"
                    height="43"
                    rx="8"
                    width="43"
                    x="115"
                    y="115"
                  />
                </svg>
              </div>
            </div>
          </button>
        </div>
      </section>
    </div>
  </main>
  <div
    aria-hidden="true"
    class="cds--layer-one cds--modal shell-power-modal"
    role="presentation"
  >
    <div
      aria-label="Power"
      aria-modal="true"
      class="cds--modal-container cds--modal-container--sm"
      role="dialog"
    >
      <button
        class="cds--visually-hidden"
        type="button"
      >
        Focus sentinel
      </button>
      <div
        class="cds--modal-container-body"
      >
        <div
          class="cds--modal-header"
        >
          <h2
            class="cds--modal-header__label cds--type-delta"
          >
            Power
          </h2>
          <h2
            class="cds--modal-header__heading cds--type-beta"
          >
            Restart backend
          </h2>
          <div
            class="cds--modal-close-button"
          >
            <span
              class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--left cds--tooltip cds--icon-tooltip"
            >
              <div
                class="cds--tooltip-trigger__wrapper"
              >
                <button
                  aria-label="Close"
                  aria-labelledby="tooltip-_r_u_"
                  class="cds--modal-close cds--btn cds--btn--primary cds--btn--icon-only"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="cds--modal-close__icon"
                    fill="currentColor"
                    focusable="false"
                    height="20"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M17.4141 16 24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                    />
                  </svg>
                </button>
              </div>
              <span
                aria-hidden="true"
                class="cds--popover"
                id="tooltip-_r_u_"
                role="tooltip"
              >
                <span
                  class="cds--popover-content cds--tooltip-content"
                >
                  Close
                </span>
                <span
                  class="cds--popover-caret"
                />
              </span>
            </span>
          </div>
        </div>
        <div
          class="cds--layer-two cds--modal-content cds--modal-scroll-content--no-fade"
        >
          Restart the MAP2 backend service? Audio processing will pause briefly while the shell reconnects.
        </div>
        <div
          aria-busy="false"
          class="cds--modal-footer cds--btn-set"
        >
          <button
            class="cds--btn cds--btn--secondary"
            type="button"
          >
            Cancel
          </button>
          <button
            class="cds--btn cds--btn--primary"
            type="button"
          >
            Confirm restart
          </button>
        </div>
      </div>
      <button
        class="cds--visually-hidden"
        type="button"
      >
        Focus sentinel
      </button>
    </div>
  </div>
</div>
`;

exports[`Desktop experience visual snapshots matches the taskbar and Start Menu shell 1`] = `
<div
  class="app-shell app-shell--themed-workspace app-shell--windowed"
>
  <main
    class="app-content app-content--full"
  >
    <section
      aria-label="Artifacts window"
      class="app-window is-open"
      style="--window-shell-accent: #be95ff;"
    >
      <div
        class="window-titlebar"
      >
        <div
          class="window-titlebar__lead"
        >
          <span
            aria-hidden="true"
            class="window-titlebar__badge"
          >
            <svg
              aria-hidden="true"
              class="window-titlebar__icon"
              focusable="false"
              height="16"
              viewBox="0 0 32 32"
              width="16"
            >
              <path
                d="M7 9h11l3 3h4v13H7z"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.8"
                vector-effect="non-scaling-stroke"
              />
              <path
                d="M7 12h18"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.8"
                vector-effect="non-scaling-stroke"
              />
              <path
                d="M12 14.5v8.5"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.8"
                vector-effect="non-scaling-stroke"
              />
              <path
                d="M15 16h7"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.8"
                vector-effect="non-scaling-stroke"
              />
              <path
                d="M15 19h7"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.8"
                vector-effect="non-scaling-stroke"
              />
              <path
                d="M15 22h5"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.8"
                vector-effect="non-scaling-stroke"
              />
              <circle
                cx="10"
                cy="16.5"
                fill="currentColor"
                r="1"
              />
              <circle
                cx="10"
                cy="19.5"
                fill="currentColor"
                r="1"
              />
              <path
                d="M10 17.5v1"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.8"
                vector-effect="non-scaling-stroke"
              />
              <path
                d="M10 20.5v1.5h1.5"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.8"
                vector-effect="non-scaling-stroke"
              />
            </svg>
          </span>
          <div
            class="window-titlebar__copy"
          >
            <span
              class="window-titlebar__eyebrow"
            >
              Program object
            </span>
            <div
              class="window-titlebar__title-row"
            >
              <strong
                class="window-titlebar__title"
              >
                Artifacts
              </strong>
              <span
                class="window-titlebar__meta"
              >
                artifacts
              </span>
            </div>
          </div>
        </div>
        <div
          class="app-window__controls"
        >
          <button
            aria-label="Close Artifacts"
            class="app-window__close"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 32 32"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M17.4141 16 24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="app-window__body"
      >
        <div
          data-testid="artifacts-page"
        >
          Audio Artifacts Workspace
        </div>
      </div>
    </section>
  </main>
  <div
    class="shell-launcher"
    style="--window-shell-accent: #be95ff;"
  >
    <div
      class="shell-launcher__button-wrap"
    >
      <button
        aria-controls="shell-launcher-panel"
        aria-expanded="true"
        aria-haspopup="menu"
        aria-label="Close platform menu"
        class="static-hero-icon-launcher__btn is-active"
        type="button"
      >
        <div
          aria-hidden="true"
          class="static-hero-icon-launcher__scene"
        >
          <div
            class="static-hero-icon-launcher__icon-wrap"
          >
            <svg
              aria-hidden="true"
              class="static-hero-icon-launcher__icon"
              focusable="false"
              viewBox="0 0 192 192"
            >
              <rect
                fill="#4589FF"
                height="168"
                rx="34"
                width="168"
                x="12"
                y="12"
              />
              <rect
                fill="none"
                height="162"
                rx="31"
                stroke="#A6C8FF"
                stroke-opacity="0.45"
                stroke-width="2"
                width="162"
                x="15"
                y="15"
              />
              <rect
                fill="#13171B"
                height="136"
                rx="24"
                width="136"
                x="28"
                y="28"
              />
              <rect
                fill="#4589FF"
                height="136"
                rx="13"
                width="26"
                x="83"
                y="28"
              />
              <rect
                fill="#4589FF"
                height="26"
                rx="13"
                width="136"
                x="28"
                y="83"
              />
              <rect
                fill="#1A1E23"
                height="43"
                rx="8"
                width="43"
                x="34"
                y="34"
              />
              <rect
                fill="#1A1E23"
                height="43"
                rx="8"
                width="43"
                x="115"
                y="34"
              />
              <rect
                fill="#1A1E23"
                height="43"
                rx="8"
                width="43"
                x="34"
                y="115"
              />
              <rect
                fill="#1A1E23"
                height="43"
                rx="8"
                width="43"
                x="115"
                y="115"
              />
            </svg>
          </div>
        </div>
      </button>
      <div
        aria-label="Platform menu"
        class="cds--layer-two shell-launcher__panel"
        id="shell-launcher-panel"
        role="menu"
      >
        <div
          class="shell-launcher__header"
        >
          <div
            class="shell-launcher__header-main"
          >
            <div
              aria-hidden="true"
              class="shell-launcher__header-mark"
            >
              <svg
                aria-hidden="true"
                class="shell-launcher__header-icon"
                focusable="false"
                viewBox="0 0 192 192"
              >
                <rect
                  fill="#4589FF"
                  height="168"
                  rx="34"
                  width="168"
                  x="12"
                  y="12"
                />
                <rect
                  fill="none"
                  height="162"
                  rx="31"
                  stroke="#A6C8FF"
                  stroke-opacity="0.45"
                  stroke-width="2"
                  width="162"
                  x="15"
                  y="15"
                />
                <rect
                  fill="#13171B"
                  height="136"
                  rx="24"
                  width="136"
                  x="28"
                  y="28"
                />
                <rect
                  fill="#4589FF"
                  height="136"
                  rx="13"
                  width="26"
                  x="83"
                  y="28"
                />
                <rect
                  fill="#4589FF"
                  height="26"
                  rx="13"
                  width="136"
                  x="28"
                  y="83"
                />
                <rect
                  fill="#1A1E23"
                  height="43"
                  rx="8"
                  width="43"
                  x="34"
                  y="34"
                />
                <rect
                  fill="#1A1E23"
                  height="43"
                  rx="8"
                  width="43"
                  x="115"
                  y="34"
                />
                <rect
                  fill="#1A1E23"
                  height="43"
                  rx="8"
                  width="43"
                  x="34"
                  y="115"
                />
                <rect
                  fill="#1A1E23"
                  height="43"
                  rx="8"
                  width="43"
                  x="115"
                  y="115"
                />
              </svg>
            </div>
            <div
              class="shell-launcher__header-copy"
            >
              <strong>
                Mackes Audio Platform
              </strong>
              <span>
                Platform 0000000000000001
              </span>
              <span>
                OS version unavailable
              </span>
              <span>
                Host unavailable
              </span>
            </div>
          </div>
          <button
            aria-label="Open Snapshot Editor"
            class="shell-launcher__header-action"
            role="menuitem"
            title="Open Snapshot Editor"
            type="button"
          >
            <svg
              aria-hidden="true"
              focusable="false"
              height="24"
              viewBox="0 0 32 32"
              width="24"
            >
              <rect
                fill="#0f172a"
                height="28"
                rx="6"
                width="28"
                x="2"
                y="2"
              />
              <rect
                fill="#3b82f6"
                height="26.4"
                rx="5.4"
                width="26.4"
                x="2.8"
                y="2.8"
              />
              <rect
                fill="#18181b"
                height="8.2"
                rx="1.2"
                width="8.2"
                x="6.6"
                y="6.6"
              />
              <rect
                fill="#18181b"
                height="8.2"
                rx="1.2"
                width="8.2"
                x="17.2"
                y="6.6"
              />
              <rect
                fill="#18181b"
                height="8.2"
                rx="1.2"
                width="8.2"
                x="6.6"
                y="17.2"
              />
              <rect
                fill="#18181b"
                height="8.2"
                rx="1.2"
                width="8.2"
                x="17.2"
                y="17.2"
              />
              <path
                d="M2.8 9.2c0-3.53 2.87-6.4 6.4-6.4h13.6c3.53 0 6.4 2.87 6.4 6.4v1.2H2.8z"
                fill="#ffffff"
                fill-opacity="0.16"
              />
              <rect
                fill="none"
                height="26.4"
                rx="5.4"
                stroke="#bfdbfe"
                stroke-opacity="0.32"
                width="26.4"
                x="2.8"
                y="2.8"
              />
            </svg>
          </button>
        </div>
        <div
          aria-label="System summary"
          class="shell-launcher__system-summary"
        >
          <div
            class="shell-launcher__summary-row shell-launcher__summary-row--node-status"
          >
            <div
              data-testid="node-nav-bar"
            />
          </div>
          <div
            class="shell-launcher__summary-row shell-launcher__summary-row--metrics"
          >
            <div
              data-testid="shell-latency-pressure-readout"
            >
              09
            </div>
            <div
              data-testid="taskbar-clock"
            >
              9:41 AM
            </div>
          </div>
          <div
            aria-label="Platform status"
            class="shell-launcher__summary-status-list"
          >
            <span>
              AVB: operational
            </span>
            <span>
              AVDECC: 1 entity
            </span>
            <span>
              Nodes: 1 active
            </span>
          </div>
          <div
            aria-label="Detected interfaces"
            class="shell-launcher__device-summary"
          >
            <div
              class="shell-launcher__device-group"
            >
              <span
                class="shell-launcher__device-heading"
              >
                Audio Interfaces
              </span>
              <div
                class="shell-launcher__device-list"
              >
                <span
                  class="shell-launcher__device-empty"
                >
                  No audio interfaces detected
                </span>
              </div>
            </div>
            <div
              class="shell-launcher__device-group"
            >
              <span
                class="shell-launcher__device-heading"
              >
                MIDI Interfaces
              </span>
              <div
                class="shell-launcher__device-list"
              >
                <span
                  class="shell-launcher__device-empty"
                >
                  No MIDI interfaces detected
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="shell-launcher__body"
        >
          <div
            class="shell-launcher__nav-v5"
          >
            <section
              aria-label="Pinned workspaces"
              class="shell-launcher__hero-section"
            >
              <span
                aria-hidden="true"
                class="shell-launcher__section-label"
              >
                Pinned
              </span>
              <div
                class="shell-launcher__hero-grid"
              >
                <a
                  class="start-menu-hero-card"
                  href="/midi-hub"
                  role="menuitem"
                  style="--item-color: var(--cds-support-success);"
                  title="Run the unified MIDI surface for controller setup, core command workflows, routing, scripts, presets, clock, diagnostics, and advanced controller orchestration. • Beta"
                >
                  <span
                    aria-hidden="true"
                    class="start-menu-hero-card__icon-wrap"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      height="20"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M25,4H10A2.002,2.002,0,0,0,8,6V20.5563A3.9551,3.9551,0,0,0,6,20a4,4,0,1,0,4,4V12H25v8.5562A3.9545,3.9545,0,0,0,23,20a4,4,0,1,0,4,4V6A2.0023,2.0023,0,0,0,25,4ZM6,26a2,2,0,1,1,2-2A2.0023,2.0023,0,0,1,6,26Zm17,0a2,2,0,1,1,2-2A2.0027,2.0027,0,0,1,23,26ZM10,6H25v4H10Z"
                      />
                    </svg>
                  </span>
                  <span
                    class="start-menu-hero-card__body"
                  >
                    <span
                      class="start-menu-hero-card__label"
                    >
                      Advanced MIDI
                    </span>
                    <span
                      class="start-menu-hero-card__desc"
                    >
                      Run the unified MIDI surface for controller setup, core command workflows, routing, scripts, presets, clock, diagnostics, and advanced controller orchestration.
                    </span>
                  </span>
                  <svg
                    aria-hidden="true"
                    class="start-menu-hero-card__arrow"
                    fill="currentColor"
                    focusable="false"
                    height="16"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M9.3 3.7 13.1 7.5 1 7.5 1 8.5 13.1 8.5 9.3 12.3 10 13 15 8 10 3z"
                    />
                  </svg>
                </a>
                <a
                  class="start-menu-hero-card"
                  href="/platforms/overview"
                  role="menuitem"
                  style="--item-color: var(--cds-support-warning);"
                  title="Cluster-wide health, activity, and deployment readiness in one board. • Beta"
                >
                  <span
                    aria-hidden="true"
                    class="start-menu-hero-card__icon-wrap"
                  >
                    <svg
                      aria-hidden="true"
                      focusable="false"
                      height="20"
                      viewBox="0 0 32 32"
                      width="20"
                    >
                      <path
                        d="M8 8h13l3 3H11z"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="1.8"
                        vector-effect="non-scaling-stroke"
                      />
                      <path
                        d="M8 11h16a2 2 0 0 1 2 2v3H8z"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="1.8"
                        vector-effect="non-scaling-stroke"
                      />
                      <path
                        d="M8 18h16a2 2 0 0 1 2 2v4H8z"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="1.8"
                        vector-effect="non-scaling-stroke"
                      />
                      <path
                        d="M10 14h5"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="1.8"
                        vector-effect="non-scaling-stroke"
                      />
                      <path
                        d="M10 21h5"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="1.8"
                        vector-effect="non-scaling-stroke"
                      />
                      <circle
                        cx="22"
                        cy="14"
                        fill="currentColor"
                        r="1.2"
                      />
                      <circle
                        cx="19"
                        cy="14"
                        fill="currentColor"
                        r="1.2"
                      />
                      <circle
                        cx="22"
                        cy="21"
                        fill="currentColor"
                        r="1.2"
                      />
                      <circle
                        cx="19"
                        cy="21"
                        fill="currentColor"
                        r="1.2"
                      />
                    </svg>
                  </span>
                  <span
                    class="start-menu-hero-card__body"
                  >
                    <span
                      class="start-menu-hero-card__label"
                    >
                      Platforms
                    </span>
                    <span
                      class="start-menu-hero-card__desc"
                    >
                      Cluster-wide health, activity, and deployment readiness in one board.
                    </span>
                  </span>
                  <svg
                    aria-hidden="true"
                    class="start-menu-hero-card__arrow"
                    fill="currentColor"
                    focusable="false"
                    height="16"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M9.3 3.7 13.1 7.5 1 7.5 1 8.5 13.1 8.5 9.3 12.3 10 13 15 8 10 3z"
                    />
                  </svg>
                </a>
                <a
                  aria-current="page"
                  class="start-menu-hero-card is-active"
                  href="/artifacts"
                  role="menuitem"
                  style="--item-color: #be95ff;"
                  title="Browse and manage all audio artifacts — LV2 plugins, NAM models, cabinet and reverb IRs, SoundFonts, and native JUCE processors — in a unified node-aware library. • Beta"
                >
                  <span
                    aria-hidden="true"
                    class="start-menu-hero-card__icon-wrap"
                  >
                    <svg
                      aria-hidden="true"
                      focusable="false"
                      height="20"
                      viewBox="0 0 32 32"
                      width="20"
                    >
                      <path
                        d="M7 9h11l3 3h4v13H7z"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="1.8"
                        vector-effect="non-scaling-stroke"
                      />
                      <path
                        d="M7 12h18"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="1.8"
                        vector-effect="non-scaling-stroke"
                      />
                      <path
                        d="M12 14.5v8.5"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="1.8"
                        vector-effect="non-scaling-stroke"
                      />
                      <path
                        d="M15 16h7"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="1.8"
                        vector-effect="non-scaling-stroke"
                      />
                      <path
                        d="M15 19h7"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="1.8"
                        vector-effect="non-scaling-stroke"
                      />
                      <path
                        d="M15 22h5"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="1.8"
                        vector-effect="non-scaling-stroke"
                      />
                      <circle
                        cx="10"
                        cy="16.5"
                        fill="currentColor"
                        r="1"
                      />
                      <circle
                        cx="10"
                        cy="19.5"
                        fill="currentColor"
                        r="1"
                      />
                      <path
                        d="M10 17.5v1"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="1.8"
                        vector-effect="non-scaling-stroke"
                      />
                      <path
                        d="M10 20.5v1.5h1.5"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="1.8"
                        vector-effect="non-scaling-stroke"
                      />
                    </svg>
                  </span>
                  <span
                    class="start-menu-hero-card__body"
                  >
                    <span
                      class="start-menu-hero-card__label"
                    >
                      Files
                    </span>
                    <span
                      class="start-menu-hero-card__desc"
                    >
                      Browse and manage all audio artifacts — LV2 plugins, NAM models, cabinet and reverb IRs, SoundFonts, and native JUCE processors — in a unified node-aware library.
                    </span>
                  </span>
                  <svg
                    aria-hidden="true"
                    class="start-menu-hero-card__arrow"
                    fill="currentColor"
                    focusable="false"
                    height="16"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M9.3 3.7 13.1 7.5 1 7.5 1 8.5 13.1 8.5 9.3 12.3 10 13 15 8 10 3z"
                    />
                  </svg>
                </a>
                <a
                  class="start-menu-hero-card"
                  href="/physical-surfaces"
                  role="menuitem"
                  style="--item-color: var(--cds-support-info);"
                  title="Open the Enriched_MIDI_Physical_Surfaces shell for shared controller-family discovery, capability posture, and per-device subpages. • Beta"
                >
                  <span
                    aria-hidden="true"
                    class="start-menu-hero-card__icon-wrap"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      height="20"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M25,4H10A2.002,2.002,0,0,0,8,6V20.5563A3.9551,3.9551,0,0,0,6,20a4,4,0,1,0,4,4V12H25v8.5562A3.9545,3.9545,0,0,0,23,20a4,4,0,1,0,4,4V6A2.0023,2.0023,0,0,0,25,4ZM6,26a2,2,0,1,1,2-2A2.0023,2.0023,0,0,1,6,26Zm17,0a2,2,0,1,1,2-2A2.0027,2.0027,0,0,1,23,26ZM10,6H25v4H10Z"
                      />
                    </svg>
                  </span>
                  <span
                    class="start-menu-hero-card__body"
                  >
                    <span
                      class="start-menu-hero-card__label"
                    >
                      Physical Surfaces
                    </span>
                    <span
                      class="start-menu-hero-card__desc"
                    >
                      Open the Enriched_MIDI_Physical_Surfaces shell for shared controller-family discovery, capability posture, and per-device subpages.
                    </span>
                  </span>
                  <svg
                    aria-hidden="true"
                    class="start-menu-hero-card__arrow"
                    fill="currentColor"
                    focusable="false"
                    height="16"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M9.3 3.7 13.1 7.5 1 7.5 1 8.5 13.1 8.5 9.3 12.3 10 13 15 8 10 3z"
                    />
                  </svg>
                </a>
              </div>
            </section>
            <section
              aria-label="All workspaces"
              class="shell-launcher__compact-section"
            >
              <span
                aria-hidden="true"
                class="shell-launcher__section-label"
              >
                All Workspaces
              </span>
              <div
                class="shell-launcher__compact-grid"
              >
                <a
                  class="start-menu-compact-card"
                  href="/tesira"
                  role="menuitem"
                  style="--item-color: var(--cds-support-error);"
                  title="Work with Biamp Tesira AVB devices for fleet views, device pages, DSP surfaces, AVB context, and multi-device operational control. • Beta"
                >
                  <span
                    aria-hidden="true"
                    class="start-menu-compact-card__icon"
                  >
                    <svg
                      aria-hidden="true"
                      focusable="false"
                      height="16"
                      viewBox="0 0 32 32"
                      width="16"
                    >
                      <rect
                        fill="none"
                        height="22"
                        rx="4"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="1.8"
                        vector-effect="non-scaling-stroke"
                        width="22"
                        x="5"
                        y="5"
                      />
                      <path
                        d="M11 9v14"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="1.8"
                        vector-effect="non-scaling-stroke"
                      />
                      <path
                        d="M17 9v14"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="1.8"
                        vector-effect="non-scaling-stroke"
                      />
                      <path
                        d="M23 9v14"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="1.8"
                        vector-effect="non-scaling-stroke"
                      />
                      <path
                        d="M9 13h14"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="1.8"
                        vector-effect="non-scaling-stroke"
                      />
                      <path
                        d="M9 19h14"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="1.8"
                        vector-effect="non-scaling-stroke"
                      />
                      <circle
                        cx="11"
                        cy="19"
                        fill="currentColor"
                        r="1.2"
                      />
                      <circle
                        cx="17"
                        cy="13"
                        fill="currentColor"
                        r="1.2"
                      />
                      <circle
                        cx="23"
                        cy="19"
                        fill="currentColor"
                        r="1.2"
                      />
                    </svg>
                  </span>
                  <span
                    class="start-menu-compact-card__label"
                  >
                    Tesira AVB
                  </span>
                </a>
                <a
                  class="start-menu-compact-card"
                  href="/edirol-ua1000"
                  role="menuitem"
                  style="--item-color: var(--cds-link-primary);"
                  title="Open the Edirol UA-1000 control page to inspect device status and interface-specific audio controls for that hardware path. • Beta"
                >
                  <span
                    aria-hidden="true"
                    class="start-menu-compact-card__icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      height="16"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M24,15V6a2,2,0,0,0-2-2H10A2,2,0,0,0,8,6v9a2,2,0,0,0-2,2V28H8V17H24V28h2V17A2,2,0,0,0,24,15ZM10,6H22v9H10Z"
                      />
                      <path
                        d="M12 10H15V12H12z"
                      />
                      <path
                        d="M17 10H20V12H17z"
                      />
                    </svg>
                  </span>
                  <span
                    class="start-menu-compact-card__label"
                  >
                    Edirol UA-1000
                  </span>
                </a>
                <a
                  class="start-menu-compact-card"
                  href="/hotone-jogg"
                  role="menuitem"
                  style="--item-color: var(--cds-support-error);"
                  title="Open the HoTone JoGG interface page for connection-state visibility and device-specific controls when that interface profile is active. • Beta"
                >
                  <span
                    aria-hidden="true"
                    class="start-menu-compact-card__icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      height="16"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19,19h-2v-6h2v6ZM4,10h-2v12h2v-12ZM14,10h-2v12h2v-12ZM24,10h-2v12h2v-12ZM9,6h-2v20h2V6ZM29,6h-2v20h2V6Z"
                      />
                    </svg>
                  </span>
                  <span
                    class="start-menu-compact-card__label"
                  >
                    HoTone JoGG
                  </span>
                </a>
                <a
                  class="start-menu-compact-card"
                  href="/intelfx"
                  role="menuitem"
                  style="--item-color: #e53935;"
                  title="Control the Rocktron Intellifex from MAP2, including signal flow editing, preset library, MIDI mapping, scenes, and real-time parameter control. • Beta"
                >
                  <span
                    aria-hidden="true"
                    class="start-menu-compact-card__icon"
                  >
                    <svg
                      aria-hidden="true"
                      focusable="false"
                      height="16"
                      viewBox="0 0 32 32"
                      width="16"
                    >
                      <rect
                        fill="none"
                        height="20"
                        rx="4"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="1.8"
                        vector-effect="non-scaling-stroke"
                        width="22"
                        x="5"
                        y="6"
                      />
                      <path
                        d="M9 11h14"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="1.8"
                        vector-effect="non-scaling-stroke"
                      />
                      <path
                        d="M9 16h14"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="1.8"
                        vector-effect="non-scaling-stroke"
                      />
                      <path
                        d="M9 21h14"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="1.8"
                        vector-effect="non-scaling-stroke"
                      />
                      <circle
                        cx="11"
                        cy="11"
                        fill="currentColor"
                        r="1.2"
                      />
                      <circle
                        cx="21"
                        cy="16"
                        fill="currentColor"
                        r="1.2"
                      />
                      <circle
                        cx="15"
                        cy="21"
                        fill="currentColor"
                        r="1.2"
                      />
                    </svg>
                  </span>
                  <span
                    class="start-menu-compact-card__label"
                  >
                    IntelFX Rack
                  </span>
                </a>
                <a
                  class="start-menu-compact-card start-menu-compact-card--blocked"
                  href="/lcd"
                  role="menuitem"
                  style="--item-color: var(--cds-support-success);"
                  title="Access the dedicated LCD console surface for external display and hardware-panel workflows that still depend on qualification evidence. • Hardware Not Detected"
                >
                  <span
                    aria-hidden="true"
                    class="start-menu-compact-card__icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      height="16"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M10,30H4a2,2,0,0,1-2-2V16a2,2,0,0,1,2-2h6a2,2,0,0,1,2,2V28A2,2,0,0,1,10,30ZM4,16V28h6V16Z"
                      />
                      <path
                        d="M28,4H6A2,2,0,0,0,4,6v6H6V6H28V20H14v2h2v4H14v2h9V26H18V22H28a2,2,0,0,0,2-2V6A2,2,0,0,0,28,4Z"
                      />
                    </svg>
                  </span>
                  <span
                    class="start-menu-compact-card__label"
                  >
                    LCD Console
                  </span>
                  <span
                    class="start-menu-compact-card__status"
                  >
                    Hardware Not Detected
                  </span>
                </a>
                <a
                  class="start-menu-compact-card"
                  href="/mpx1"
                  role="menuitem"
                  style="--item-color: var(--cds-link-primary);"
                  title="Control the Lexicon MPX-1 from MAP2, including editor access, live program changes, diagnostics, library tasks, and MIDI mapping tools. • Beta"
                >
                  <span
                    aria-hidden="true"
                    class="start-menu-compact-card__icon"
                  >
                    <svg
                      aria-hidden="true"
                      focusable="false"
                      height="16"
                      viewBox="0 0 32 32"
                      width="16"
                    >
                      <rect
                        fill="none"
                        height="20"
                        rx="4"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="1.8"
                        vector-effect="non-scaling-stroke"
                        width="22"
                        x="5"
                        y="6"
                      />
                      <path
                        d="M9 11h14"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="1.8"
                        vector-effect="non-scaling-stroke"
                      />
                      <path
                        d="M9 16h14"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="1.8"
                        vector-effect="non-scaling-stroke"
                      />
                      <path
                        d="M9 21h14"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="1.8"
                        vector-effect="non-scaling-stroke"
                      />
                      <circle
                        cx="11"
                        cy="11"
                        fill="currentColor"
                        r="1.2"
                      />
                      <circle
                        cx="21"
                        cy="16"
                        fill="currentColor"
                        r="1.2"
                      />
                      <circle
                        cx="15"
                        cy="21"
                        fill="currentColor"
                        r="1.2"
                      />
                    </svg>
                  </span>
                  <span
                    class="start-menu-compact-card__label"
                  >
                    MPX1 Rack
                  </span>
                </a>
                <a
                  class="start-menu-compact-card"
                  href="/perform"
                  role="menuitem"
                  style="--item-color: var(--cds-support-warning);"
                  title="Open the full-screen live-performance surface for fast preset access, bypass control, tempo actions, and stage-focused guitar operation. • Beta"
                >
                  <span
                    aria-hidden="true"
                    class="start-menu-compact-card__icon"
                  >
                    <svg
                      aria-hidden="true"
                      focusable="false"
                      height="16"
                      viewBox="0 0 32 32"
                      width="16"
                    >
                      <path
                        d="M8 7h16"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="1.8"
                        vector-effect="non-scaling-stroke"
                      />
                      <path
                        d="M12 7l-2 6"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="1.8"
                        vector-effect="non-scaling-stroke"
                      />
                      <path
                        d="M20 7l2 6"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="1.8"
                        vector-effect="non-scaling-stroke"
                      />
                      <path
                        d="M10 20h12"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="1.8"
                        vector-effect="non-scaling-stroke"
                      />
                      <path
                        d="M12 24h8"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="1.8"
                        vector-effect="non-scaling-stroke"
                      />
                      <path
                        d="M16 10v10"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="1.8"
                        vector-effect="non-scaling-stroke"
                      />
                      <path
                        d="M16 10c0-2.4 1.8-4 4-4"
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="1.8"
                        vector-effect="non-scaling-stroke"
                      />
                      <circle
                        cx="20"
                        cy="6"
                        fill="currentColor"
                        r="1.5"
                      />
                    </svg>
                  </span>
                  <span
                    class="start-menu-compact-card__label"
                  >
                    Stage Mode
                  </span>
                </a>
                <a
                  class="start-menu-compact-card"
                  href="/brain"
                  role="menuitem"
                  style="--item-color: var(--cds-link-primary);"
                  title="Open the Performance Brain workspace for unified triggering, sequencing, routing, input control, library work, and diagnostics. • Beta"
                >
                  <span
                    aria-hidden="true"
                    class="start-menu-compact-card__icon"
                  >
                    <svg
                      aria-hidden="true"
                      fill="currentColor"
                      focusable="false"
                      height="16"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M25,4H10A2.002,2.002,0,0,0,8,6V20.5563A3.9551,3.9551,0,0,0,6,20a4,4,0,1,0,4,4V12H25v8.5562A3.9545,3.9545,0,0,0,23,20a4,4,0,1,0,4,4V6A2.0023,2.0023,0,0,0,25,4ZM6,26a2,2,0,1,1,2-2A2.0023,2.0023,0,0,1,6,26Zm17,0a2,2,0,1,1,2-2A2.0027,2.0027,0,0,1,23,26ZM10,6H25v4H10Z"
                      />
                    </svg>
                  </span>
                  <span
                    class="start-menu-compact-card__label"
                  >
                    Brain
                  </span>
                </a>
              </div>
            </section>
          </div>
        </div>
        <div
          class="shell-launcher__footer"
        >
          <div
            class="shell-launcher__power-root"
          >
            <span
              class="cds--overflow-menu__wrapper"
            >
              <span
                class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top cds--tooltip cds--icon-tooltip"
              >
                <div
                  class="cds--tooltip-trigger__wrapper"
                >
                  <button
                    aria-expanded="false"
                    aria-haspopup="true"
                    aria-labelledby="tooltip-_r_1h_"
                    class="shell-launcher__power-menu-trigger cds--overflow-menu cds--overflow-menu--md cds--btn cds--btn--md cds--layout--size-md cds--btn--ghost cds--btn--icon-only"
                    type="button"
                  >
                    <svg
                      aria-label="Power actions"
                      class="cds--overflow-menu__icon"
                      fill="currentColor"
                      focusable="false"
                      height="16"
                      preserveAspectRatio="xMidYMid meet"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M11.2,2.9l-0.5,0.9c2.6,1.5,3.5,4.9,2,7.5s-4.9,3.5-7.5,2s-3.5-4.9-2-7.5c0.5-0.8,1.2-1.5,2-2L4.8,2.9 c-3.1,1.8-4.2,5.8-2.4,8.9s5.8,4.2,8.9,2.4s4.2-5.8,2.4-8.9C13.1,4.3,12.2,3.4,11.2,2.9z"
                      />
                      <path
                        d="M7.5 1H8.5V8H7.5z"
                      />
                    </svg>
                  </button>
                </div>
                <span
                  aria-hidden="true"
                  class="cds--popover"
                  id="tooltip-_r_1h_"
                  role="tooltip"
                >
                  <span
                    class="cds--popover-content cds--tooltip-content"
                  >
                    Power actions
                  </span>
                  <span
                    class="cds--popover-caret"
                  />
                </span>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    class="cds--layer-one cds--modal shell-power-modal"
    role="presentation"
  >
    <div
      aria-label="Power"
      aria-modal="true"
      class="cds--modal-container cds--modal-container--sm"
      role="dialog"
    >
      <button
        class="cds--visually-hidden"
        type="button"
      >
        Focus sentinel
      </button>
      <div
        class="cds--modal-container-body"
      >
        <div
          class="cds--modal-header"
        >
          <h2
            class="cds--modal-header__label cds--type-delta"
          >
            Power
          </h2>
          <h2
            class="cds--modal-header__heading cds--type-beta"
          >
            Restart backend
          </h2>
          <div
            class="cds--modal-close-button"
          >
            <span
              class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--left cds--tooltip cds--icon-tooltip"
            >
              <div
                class="cds--tooltip-trigger__wrapper"
              >
                <button
                  aria-label="Close"
                  aria-labelledby="tooltip-_r_1b_"
                  class="cds--modal-close cds--btn cds--btn--primary cds--btn--icon-only"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="cds--modal-close__icon"
                    fill="currentColor"
                    focusable="false"
                    height="20"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M17.4141 16 24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                    />
                  </svg>
                </button>
              </div>
              <span
                aria-hidden="true"
                class="cds--popover"
                id="tooltip-_r_1b_"
                role="tooltip"
              >
                <span
                  class="cds--popover-content cds--tooltip-content"
                >
                  Close
                </span>
                <span
                  class="cds--popover-caret"
                />
              </span>
            </span>
          </div>
        </div>
        <div
          class="cds--layer-two cds--modal-content cds--modal-scroll-content--no-fade"
        >
          Restart the MAP2 backend service? Audio processing will pause briefly while the shell reconnects.
        </div>
        <div
          aria-busy="false"
          class="cds--modal-footer cds--btn-set"
        >
          <button
            class="cds--btn cds--btn--secondary"
            type="button"
          >
            Cancel
          </button>
          <button
            class="cds--btn cds--btn--primary"
            type="button"
          >
            Confirm restart
          </button>
        </div>
      </div>
      <button
        class="cds--visually-hidden"
        type="button"
      >
        Focus sentinel
      </button>
    </div>
  </div>
</div>
`;
